syntax = "proto3";

package pom.domain;

import "akkaserverless/annotations.proto";

option java_outer_classname = "UserDomain";

option (akkaserverless.file).value_entity = {
  name: "User"
  entity_type: "user"
  state: "UserState"
};

message UserState {
  string user_id = 1 ;
  string first_name = 2;
  string last_name = 3;
  string address = 4;
  string location_coordinates = 5;
  string phone_number = 6;
  string email_id = 7;
  string user_type = 8;
  string sub_type = 9 ;
  string password = 10;
}
